# TrafoTCC

./: .dockerignore  .gitignore  1.py  Dockerfile  Makefile  Pipfile  docker-compose.yaml  dra.drawio  individuos.xlsx  manager.py  out.json  readme.md  test.py
.devcontainer/: devcontainer.json  docker-compose.yml
AG/: AG.py  Individuo.py  Populacao.py  funcoes.py
AG3/: Individuo.py
GUI/: Makefile  ag.json  json_padrao copy.json  json_padrao.json  main.py  main.ui  ola.json  resources.qrc  resources_rc.py  save.json  scroll.py  teste.py
Interface/: principal.ui
Trafo/: CONSTANTES.py  __init__.py  trafo.py
Utils/: SharedDict.py  __init__.py  tabelas.py  teste_apagar.py  utils.py
escrita/: .~lock.DANILO_TCC1.docx#  DANILO_TCC1.docx  DANILO_TCC1_.docx  DANILO_TCC1_ANTES_DAS_FORMULAS.docx  DANILO_TCC2.docx  preferencias_italico_14.eqp  ~$NILO_TCC1.docx  ~$NILO_TCC1_.docx  ~WRL3799.tmp
graficos/: analise_dados.py  dados.ipynb  funcao_mono_objetivo.py  teste_apagar.py
tcc/: Makefile  manager.py  pyproject.toml
tcc/tcc/AG/: AG.py  Individuo.py  Populacao.py  funcoes.py
tcc/tcc/trafo/: CONSTANTES.py  trafo.py
tcc/tcc/utils/: SharedDict.py  __init__.py  tabelas.py  utils.py
tcc/tests/: config.json  test_trafo.py  utils.py
tcc/tests/json/AG/: ag.json  teste_13.json
tcc/tests/json/trafo/: BH.json  VA.json  teste_11.json  teste_5.json  teste_8.json  teste_9.json
tcc/tests/tests_AG/: test_AG.py  test_AG_Individuo.py  test_AG_população.py
tests/: config.json  test_AG.py  test_AG_Individuo.py  test_AG_população.py  test_trafo.py  utils.py
(+74 files in other folders)
